plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.5'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.thoughtworks.ssr'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}


subprojects {
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java'

    bootJar {
        enabled = false
    }

    jar {
        enabled = true
    }

    dependencies {
        // -------- springboot ------------
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'

        // -------- db ------------
        implementation 'org.flywaydb:flyway-mysql'
        implementation 'mysql:mysql-connector-java'

        // -------- aws ------------
        implementation platform('com.amazonaws:aws-java-sdk-bom:1.12.300')
        implementation 'com.amazonaws:aws-java-sdk-s3'

        // -------- lombok ------------
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // -------- auth ------------
        implementation 'io.jsonwebtoken:jjwt:0.9.1'
        implementation 'org.opensaml:opensaml-core:4.0.1'
        implementation 'org.opensaml:opensaml-saml-api:4.0.1'
        implementation 'org.opensaml:opensaml-saml-impl:4.0.1'
        implementation 'org.opensaml:opensaml-xmlsec-impl:3.4.5'
        implementation 'com.google.code.gson:gson:2.10'

        // queryDsl
        def queryDslVersion = '5.0.0'

        implementation("com.querydsl:querydsl-core:${queryDslVersion}")
        implementation("com.querydsl:querydsl-jpa:${queryDslVersion}")
        //关键地方(记得开启annotationProcessor)
        annotationProcessor("com.querydsl:querydsl-apt:${queryDslVersion}:jpa",
                "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final",
                "javax.annotation:javax.annotation-api:1.3.2",
                "org.projectlombok:lombok")

        // mapstruct
        implementation 'org.mapstruct:mapstruct:1.5.0.Final'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.0.Final'

        runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
        implementation 'pl.project13.maven:git-commit-id-plugin:4.0.3'

        implementation 'org.springframework.boot:spring-boot-starter-test'
        // dev
        developmentOnly 'org.springframework.boot:spring-boot-devtools'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    }

    test {
        useJUnitPlatform()
    }
}


